--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.6.0
+  sensors_plus: ^7.0.0
+  geolocator: ^14.0.0
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  connectivity_plus: ^7.0.0
+  http: ^1.2.0
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  path: ^1.8.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 flutter:
   uses-material-design: true
