--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   path: ^1.8.3
+  firebase_app_check: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
