--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,13 @@ dependencies:
   sqflite: ^2.3.2
   path_provider: ^2.1.2
   connectivity_plus: ^7.0.0
-  http: ^1.2.0
+  http: ^1.5.0
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   path: ^1.8.3
   firebase_app_check: ^0.4.0+1
+  image_picker: ^1.2.0
+  cloud_firestore: ^6.0.1
 
 dev_dependencies:
   flutter_test:
