--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,9 +25,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to your location to track your trips.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs access to your location to automatically detect and record your trips, even when the app is in the background.</string>
+	<string>This app needs access to your location to send it to your emergency contacts in case of an emergency.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to your location to send it to your emergency contacts in case of an emergency.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>This app needs access to your contacts to send them an SOS message in case of an emergency.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
