--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_contacts: ^1.1.9+2
   location: ^8.0.1
+  flutter_sms: ^2.3.3
+  shared_preferences: ^2.2.3
+  telephony: ^0.2.0
 
 dev_dependencies:
   flutter_test:
