--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,38 @@
-name: safarsathi_app
-description: A travel tracking app for Kerala Tourism.
+name: safar_sathi
+description: A new Flutter project.
 publish_to: 'none'
 version: 1.0.0+1
+
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   google_fonts: ^6.1.0
-  font_awesome_flutter: ^10.6.0
-  sensors_plus: ^7.0.0
-  geolocator: ^14.0.0
-  sqflite: ^2.3.2
-  path_provider: ^2.1.2
-  connectivity_plus: ^7.0.0
-  http: ^1.5.0
-  firebase_core: ^4.1.0
-  firebase_auth: ^6.0.2
+  permission_handler: ^11.1.0
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  flutter_contacts: ^1.1.7+1
+  shared_preferences: ^2.2.2
+  url_launcher: ^6.2.1
+  firebase_core: ^2.24.2
+  firebase_app_check: ^0.2.1+8
+  sqflite: ^2.3.0
   path: ^1.8.3
-  firebase_app_check: ^0.4.0+1
-  image_picker: ^1.2.0
-  cloud_firestore: ^6.0.1
-  permission_handler: ^12.0.1
-  flutter_contacts: ^1.1.9+2
-  location: ^8.0.1
-  flutter_sms: ^2.3.3
-  shared_preferences: ^2.2.3
-  telephony: ^0.2.0
+  cloud_firestore: ^4.13.6
+  firebase_auth: ^4.15.3
+  font_awesome_flutter: ^10.6.0
+  image_picker: ^1.0.4
+  http: ^1.1.0
+  sensors_plus: ^3.0.3
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^3.0.1
+
 flutter:
   uses-material-design: true
