--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,35 +1,41 @@
-name: safarsathi_app
-description: A travel tracking app for Kerala Tourism.
+name: yatrica
+description: A travel tracking app.
 publish_to: 'none'
 version: 1.0.0+1
+
 environment:
   sdk: '>=3.0.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
-  font_awesome_flutter: ^10.6.0
+  google_fonts: ^6.3.1
+  font_awesome_flutter: ^10.10.0
   sensors_plus: ^7.0.0
-  geolocator: ^14.0.0
-  sqflite: ^2.3.2
-  path_provider: ^2.1.2
+  geolocator: ^14.0.2
+  path_provider: ^2.1.5
   connectivity_plus: ^7.0.0
   http: ^1.5.0
-  firebase_core: ^4.1.0
-  firebase_auth: ^6.0.2
-  path: ^1.8.3
-  firebase_app_check: ^0.4.0+1
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  path: ^1.9.1
+  firebase_app_check: ^0.4.1
   image_picker: ^1.2.0
-  cloud_firestore: ^6.0.1
+  cloud_firestore: ^6.0.2
   permission_handler: ^12.0.1
-  telephony: ^0.2.0
   flutter_contacts: ^1.1.9+2
   location: ^8.0.1
+  intl: ^0.20.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  activity_recognition_flutter: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^3.0.2
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.13
+
 flutter:
   uses-material-design: true
