--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   intl: ^0.20.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  activity_recognition_flutter: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +35,12 @@ dev_dependencies:
   flutter_lints: ^3.0.2
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
+
+dependency_overrides:
+  activity_recognition_flutter:
+    git:
+      url: https://github.com/hresolution/activity_recognition_flutter.git
+      ref: master
 
 flutter:
   uses-material-design: true
